...
    public var title: String {
        switch self {
        case .tapTopLeft: return "Tap top-left"
        case .tapTop: return "Tap top"
        case .tapTopRight: return "Tap top-right"
        case .tapLeft: return "Tap left"
        case .tapCenter: return "Tap center"
        case .tapRight: return "Tap right"
        case .tapBottomLeft: return "Tap bottom-left"
        case .tapBottom: return "Tap bottom"
        case .tapBottomRight: return "Tap bottom-right"
        case .swipeUp: return "Swipe up"
        case .swipeDown: return "Swipe down"
...
